Submitting website to google

--- a/angular.json
+++ b/angular.json
@@ -21,7 +21,10 @@
             "aot": false,
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/sitemap.xml",
+              "src/_redirects",
+              "src/robots.txt"
             ],
             "styles": [
               "src/styles.css"
