--- a/netlify.toml
+++ b/netlify.toml
@@ -5,6 +5,14 @@ publish = "dist/lashmapbeautystudio-ui"
 [build.environment]
   NODE_VERSION = "16"
 
+# Redirect HTTP to HTTPS permanently (SEO-friendly)
+[[redirects]]
+  from = "http://*"
+  to = "https://:splat"
+  status = 301
+  force = true
+
+# Handle Angular SPA routing
 [[redirects]]
   from = "/*"
   to = "/index.html"
